* Support JSPaint theming properly * Save no title state in clock * Contain fit behavior for clock canvas * Keep madconf bottom buttons on top at a fixed position to prevent being stuck with weirdly large UI fonts (e.g. Wide Latin)

--- a/apps/clock/clock.css
+++ b/apps/clock/clock.css
@@ -25,8 +25,13 @@ svg {
 
 canvas {
     position: absolute;
-    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     height: 100%;
+    max-height: 100%;
+    max-width: 100%;
+    aspect-ratio: 1 / 1;
     z-index: 1;
 }
 
